[tool.poetry]
name = "causalode"
version = "0.1.0"
description = ""
authors = ["Edward De Brouwer <edward.debrouwer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
torch = "^1.10.1"
pytorch-lightning = "^1.5.8"
wandb = "^0.12.9"
pandas = "^1.3.5"
plotly = "^5.5.0"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
ipdb = "^0.13.9"
azureml = "^0.2.7"
torchdiffeq = "^0.2.2"
torchsde = "^0.2.5"
azureml-core = "^1.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
